<resources>
    <string name="app_name">Travel Gallery</string>
    <string name="albums">Albums</string>
    <string name="account">Account</string>
    <string name="photos">Photos</string>
    <string name="settings">Settings</string>
    <string name="travel_goals">Travel Goals</string>
    <string name="map">Map</string>
    <string name="loading">Loading...</string>
    <string name="photo">Photo</string>

    // Messages
    <string name="message_photo_added_to_friend">This photo is added to friend\'s list</string>
    <string name="message_photo_added_to_favorite">This photo is added to favorite\'s list</string>
    <string name="message_photo_added_to_food">This photo is added to food\'s list</string>
    <string name="message_photo_removed_from_friend">This photo is removed from friend\'s list</string>
    <string name="message_photo_removed_from_favorite">This photo is removed from favorite\'s list</string>
    <string name="message_photo_removed_from_food">This photo is removed from food\'s list</string>
    <string name="message_empty_view_photos">Let\'s add some travel photos to the app</string>
    <string name="message_empty_view_photos_select">There are no photos to select</string>
    <string name="message_empty_view_album_details">There is no photo. Let\'s add some travel photos to this album</string>
    <string name="message_empty_view_albums">Let\'s create an album to store photos</string>
    <string name="message_empty_view_travel_lists">Let\'s add some travel location to the wish list</string>
    <string name="message_empty_view_locations">No locations found. Please type in a different keyword</string>
    <string name="message_select_location_for_album">Please select a location for this album</string>
    <string name="message_delete_album">Deleting this album is permanent. Photos that were in this album remain in the app</string>
    <string name="message_no_photos_to_select">There is no photo to select</string>
    <string name="message_photo_updated">Photo updated</string>
    <string name="message_photos_added_to_album">Photos were added to your album</string>

    // Error messages
    <string name="error_message_photo_remove_from_friend">Opps, somehow photo is not removed from friend\'s list</string>
    <string name="error_message_photo_remove_from_favorite">Opps, somehow photo is not removed from favorite\'s list</string>
    <string name="error_message_photo_remove_from_food">Opps, somehow photo is not removed from food\'s list</string>
    <string name="error_message_photo_add_to_friend">Opps, somehow photo is not added to friend\'s list</string>
    <string name="error_message_photo_add_to_favorite">Opps, somehow photo is not added to favorite\'s list</string>
    <string name="error_message_photo_add_to_food">Opps, somehow photo is not added to food\'s list</string>
    <string name="error_message_empty_album_name">Album name cannot be empty</string>
    <string name="error_message_no_album_type_selected">Select an album type</string>

    <string name="preview_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="favorite">Favorite</string>
    <string name="food">Food</string>
    <string name="people">People</string>
    <string name="main_information">Main Information</string>
    <string name="location">Location</string>
    <string name="photo_information">Photo Information</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="use_as">Use As</string>
    <string name="others">Others</string>
    <string name="new_album">New Album</string>
    <string name="album_details">Album Details</string>
    <string name="edit_album">Edit Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="add_photos">Add Photos</string>
    <string name="description_favorite_album">My collection of favorite photos around the world</string>
    <string name="description_food_album">My collection of food I tried around the world</string>
    <string name="description_people_album">My collection of people I met around the world</string>
    <string name="delete_this_album">Delete this album?</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="continue_string">Continue</string>
    <string name="creating_new_album">Creating New Album</string>
    <string name="album_name">Album Name</string>
    <string name="album_description">Album Description</string>
    <string name="photo_description">Photo Description</string>
    <string name="album_overview">Album Overview</string>
    <string name="choose_location">Choose Location</string>
    <string name="no_location_selected">No Location Selected</string>
    <string name="new_update_album">New/Update Album</string>
    <string name="updating_album">Updating Album</string>
    <string name="choose_a_cover_image">Choose a cover image</string>
    <string name="search_location">Search Location</string>
    <string name="date_taken">Date Taken</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="update_photo_info">Update photo information</string>
    <string name="save">Save</string>
    <string name="searching_for_location">Searching for location</string>
    <string name="select_photos">Select Photos</string>
    <string name="photos_select">Photos Select</string>
    <string name="sort_photos">Sort Photos</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_randomly">Sort randomly</string>
    <string name="choose_sorting_option">Choose your sorting option:</string>

</resources>
