<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navPhotos"
            android:icon="@drawable/ic_photo"
            android:title="@string/photos"/>
        <item
            android:id="@+id/navAlbums"
            android:icon="@drawable/ic_album"
            android:title="@string/albums"/>
        <item
            android:id="@+id/navAccount"
            android:icon="@drawable/ic_account"
            android:title="@string/account"/>
        <item
            android:id="@+id/navMap"
            android:icon="@drawable/ic_map"
            android:title="@string/map"/>
        <item
            android:id="@+id/navTravelGoals"
            android:icon="@drawable/ic_travel_goals"
            android:title="@string/travel_goals"/>
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
</menu>