<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/photosFragment">

    <fragment
        android:id="@+id/accountFragment"
        android:label="@string/account"
        android:name="tech.ducletran.travelgalleryupgrade.account.AccountFragment"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/albumsFragment"
        android:label="@string/albums"
        android:name="tech.ducletran.travelgalleryupgrade.albums.AlbumsFragment"
        tools:layout="@layout/fragment_albums"/>

    <fragment
        android:id="@+id/photosFragment"
        android:label="@string/photos"
        android:name="tech.ducletran.travelgalleryupgrade.photos.PhotosFragment"
        tools:layout="@layout/fragment_photos">
        <action
            android:id="@+id/actionPhotosToPhotoDetail"
            app:destination="@id/photoDetailsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:label="@string/settings"
        android:name="tech.ducletran.travelgalleryupgrade.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/travelGoalsFragment"
        android:label="@string/travel_goals"
        android:name="tech.ducletran.travelgalleryupgrade.travelgoals.TravelGoalsFragment"
        tools:layout="@layout/fragment_travel_goals"/>

    <fragment
        android:id="@+id/mapFragment"
        android:label="@string/map"
        android:name="tech.ducletran.travelgalleryupgrade.map.MapFragment"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/photoDetailsFragment"
        android:label="@string/photo"
        android:name="tech.ducletran.travelgalleryupgrade.photodetails.PhotoDetailsFragment"
        tools:layout="@layout/fragment_photo_details">
        <action
            android:id="@+id/actionPhotoDetailsToPhotoInfo"
            app:destination="@id/photoInfoFragment"/>
        <argument
            android:name="photoId"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>

    <fragment
        android:id="@+id/photoInfoFragment"
        android:label="@string/photo_information"
        android:name="tech.ducletran.travelgalleryupgrade.photodetails.PhotoInfoFragment"
        tools:layout="@layout/fragment_photo_info">
        <argument
            android:name="photoId"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>

</navigation>